02-envoy-gateway/16-securitypolicy-extauth/manifests/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: extauth-protect
  namespace: demo
spec:
  parentRefs:
    - name: extauth-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: helloworld
          port: 8080
